deployments/k8s/groovv-app/groovv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groovv-io
spec:
  replicas: 2
  selector:
    matchLabels:
      app: groovv-io
  template:
    metadata:
      labels:
        app: groovv-io
    spec:
      containers:
        - name: groovv-io
          image: us-docker.pkg.dev/groovv-cloud/groovv-containers/groovv.io:1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "8000m"
            requests:
              memory: "2Gi"
              cpu: "4000m"
          livenessProbe:
            periodSeconds: 10
            initialDelaySeconds: 30
            httpGet:
              port: 8080
              path: /login
          ports:
            - containerPort: 8080
