deployments/k8s/groovv-app/networking.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: groovv-io-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config:
      '{"default": "groovv-io-backend-config"}'
spec:
  selector:
    app: groovv-io
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80

---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groovv-io-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: app-groovv-io-cert
    kubernetes.io/ingress.global-static-ip-name: "groovv-io-ip"
    networking.gke.io/v1beta1.FrontendConfig: "groovv-application-frontend-config"
spec:
  defaultBackend:
    service:
      name: groovv-io-service
      port:
        number: 80
